k8s/deployment-golang-2.yaml
apiVersion: apps/v1
kind: Deployment
# Deployment will maintain Replica Set
# Replica Set will maintain Num of Pod

metadata:
  name: golang-app-2
  namespace: default # it should "roadrunner" in real case
  labels:
    app: golang-app-2
    desc: testing_app

  
    
spec:
  replicas: 1 
  # Make sure we have num of pod  
  selector:
    # Watching num of pod in selected pod label  
    matchLabels:
      name: golang-app-2
  template:
    # Template for pod
    metadata:
      name: golang-app-2
      # Replica set will add random char suffix  
      labels:
        name: golang-app-2
        app: golang-app-2
        # We watch this "name" label for service and replica set
    spec:
      # serviceAccountName: golang-app
      containers:
        - name: golang-app-2
          image: iimnd/golang-app:0.1.5 # versi 3 oprekan baru opentracing
          ports:
            # Use standard 8000 port for all system as much as possible
            - containerPort: 9000
          resources:
           # Give appropriate number
            requests:
              memory: "32Mi" 
              cpu: "200m"
            limits:
              memory: "64Mi"
              cpu: "250m"
          volumeMounts:
          - name: golang-volume
            mountPath: /app/.env
            subPath: .env
          livenessProbe:
            # If it fail, then kill the pod
            # wait for initialDelaySeconds + failureThreshold * periodSeconds
            httpGet:
                path: /health
                port: 9000
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 9 # 90s == 1.5m
          readinessProbe:
            # If it fail, then don't send the traffic
            httpGet:
                path: /health
                port: 9000
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 3 # 30s
          startupProbe:
            # If it fail, then don't check liveness and readiness
            httpGet:
                path: /health
                port: 9000
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 3
            periodSeconds: 10
            failureThreshold: 30 # 303s == +- 5m

      volumes:
      - name: golang-volume
        configMap:
         name: golang-app-env


# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: golang-app
#   labels:
#     account: golang-app
