k8s/deployment-golang.yaml
apiVersion: apps/v1
kind: Deployment
# Deployment will maintain Replica Set
# Replica Set will maintain Num of Pod

metadata:
  name: golang-app
  namespace: default # it should "roadrunner" in real case
  labels:
    app: golang-app
    desc: testing_app

  
    
spec:
  replicas: 1 
  # Make sure we have num of pod  
  selector:
    # Watching num of pod in selected pod label  
    matchLabels:
      name: golang-app
  template:
    # Template for pod
    metadata:
      name: golang-app
      # Replica set will add random char suffix  
      labels:
        name: golang-app
        app: golang-app
        # We watch this "name" label for service and replica set
    spec:
      # serviceAccountName: golang-app
      containers:
        - name: golang-app
          image: iimnd/golang-app:2.0.5 # versi 4 stable
          ports:
            # Use standard 8000 port for all system as much as possible
            - containerPort: 8000
          # resources:
          #  # Give appropriate number
          #   requests:
          #     memory: "32Mi" 
          #     cpu: "200m"
          #   limits:
          #     memory: "64Mi"
          #     cpu: "250m"
          volumeMounts:
          - name: golang-volume
            mountPath: /app/.env
            subPath: .env
      volumes:
      - name: golang-volume
        configMap:
         name: golang-app-env


# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: golang-app
#   labels:
#     account: golang-app
