k8s/service-golang-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-app-service-2
  namespace: default # it should "roadrunner" in real case
  labels:
    app: golang-app-2
    service: golang-app-2
    desc: testing_app
   
spec:
  type: NodePort
  selector:
    name: golang-app-2
    app: golang-app-2
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 8000
      name: http2
      # Target to Pod port
