k8s/ingress-golang.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: golang-local.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: golang-app-service
                port:
                  number: 8000
